cabal-version: 3.6
name:          ttt
version:       0.1.0.0
build-type:    Simple

common shared-properties
  build-depends:
    , async       ==2.2.4
    , base
    , bytestring  ==0.11.4.0

  default-language: Haskell2010

executable t1
  import:      shared-properties
  main-is:     ./t1.hs
  ghc-options:
    -threaded -debug -rtsopts "-with-rtsopts=-N -qg1 -A128k -DZ -DS"
