cabal-version: 3.8
name:          t
version:       0.1.0.0
build-type:    Simple

common shared-properties
  build-depends:
    , base
    , bytestring
    , ghc-heap-view

  default-language: Haskell2010

executable t
  import:      shared-properties
  main-is:     ./t.hs
  cxx-sources: t.c
  ghc-options:
    -threaded -debug -rtsopts "-with-rtsopts=-N"
